<resources>
    <string name="app_name">AINotes</string>

    <string name="file_name">File Name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="directory_name">Directory Name</string>
    <string name="create_file">Create File</string>
    <string name="create_directory">Create Directory</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="copy">Copy</string>
    <string name="remove">Remove</string>
    <string name="directories">Directories</string>
    <string name="files">Files</string>
    <string name="create_new">Create new</string>
    <string name="file">File</string>
    <string name="directory">Directory</string>
    <string name="file_manager">Filemanager</string>
    <string name="sort">Sort</string>
    <string name="move">Move</string>
    <string name="resize_to_right">Resize to right</string>
    <string name="resize">Resize</string>
    <string name="search">Search</string>
    <string name="navigation">Navigation</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="deselect_selected_items">Deselect selected items</string>
    <string name="select_all_items">Select all items</string>
    <string name="delete_all_selected_items">Delete all selected items</string>
    <string name="menu_for_selected_items">Menu for selected items</string>
    <string name="go_to_file_manager">Go to File Manager</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="menu">Menu</string>
    <string name="rename_directory">Rename Directory</string>
    <string name="write_your_feedback">Write your Feedback</string>
    <string name="include_logs">Include Logs</string>
    <string name="send_feedback">Send feedback</string>
    <string name="item_options">Item Options</string>
    <string name="rename_file">Rename File</string>
    <string name="navigation_header">Navigation Header</string>
    <string name="failed_to_load">Failed to load</string>
    <string name="modified">Modified</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="selected">selected</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="sort_by">Sort by</string>
    <string name="last_created">Last created</string>
    <string name="last_modified">Last modified</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="label">Label</string>
    <string name="insert_from">Insert from</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cut">Cut</string>
    <string name="to_foreground">To foreground</string>
    <string name="to_background">To background</string>
    <string name="crop">Crop</string>
    <string name="rotate90left">Rotate 90° to left</string>
    <string name="rotate90right">Rotate 90° to right</string>
    <string name="cropping_image">Cropping Image</string>
    <string name="adjust_corners">Adjust Corners</string>
    <string name="play_store">Play Store</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="filter">Filter</string>
    <string name="back">Back</string>
    <string name="icon">Icon</string>
    <string name="save">Save</string>
</resources>