<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sort_options_title"
            style="@style/BottomSheetFileItem"
            android:drawableStart="@drawable/ic_sort"
            android:drawableEnd="@drawable/ic_arrow_upward"
            android:text="@string/sort_by" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="6dp"
        android:background="#DCD7D7" />

    <TextView
        android:id="@+id/option_last_created"
        style="@style/BottomSheetFileItem"
        android:drawableStart="@null"
        android:text="@string/last_created" />

    <TextView
        android:id="@+id/option_last_modified"
        style="@style/BottomSheetFileItem"
        android:drawableStart="@null"
        android:text="@string/last_modified" />

    <TextView
        android:id="@+id/option_alphabetical"
        style="@style/BottomSheetFileItem"
        android:drawableStart="@null"
        android:text="@string/alphabetical" />

    <TextView
        android:id="@+id/option_label"
        style="@style/BottomSheetFileItem"
        android:drawableStart="@null"
        android:text="@string/label" />
</LinearLayout>