<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text="@string/create_new"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_view_add_file"
        style="@style/BottomSheetFileManagerItem"
        android:drawableStart="@drawable/ic_file"
        android:text="@string/file" />

    <TextView
        android:id="@+id/text_view_add_directory"
        style="@style/BottomSheetFileManagerItem"
        android:drawableStart="@drawable/ic_folder"
        android:text="@string/directory" />
</LinearLayout>