<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text="@string/insert_from"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/insert_from_camera"
        style="@style/BottomSheetFileManagerItem"
        android:drawableStart="@drawable/ic_camera"
        android:text="@string/camera" />

    <TextView
        android:id="@+id/insert_from_gallery"
        style="@style/BottomSheetFileManagerItem"
        android:drawableStart="@drawable/ic_gallery"
        android:text="@string/gallery" />
</LinearLayout>