<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/directory_rename_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rename_directory"
        android:textAlignment="center"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/directory_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/directory_name_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/directory_rename_cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/directory_rename_rename_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rename" />
    </LinearLayout>
</LinearLayout>