<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/feedback_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="28dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_your_feedback"
        android:paddingTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedback_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/include_logs_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/include_logs" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/feedback_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/send_feedback"
            app:icon="@drawable/ic_feedback" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/play_store_feedback"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/play_store"
            app:icon="@drawable/ic_feedback" />

    </LinearLayout>

</LinearLayout>