<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/button_deselect_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@null"
        android:contentDescription="@string/deselect_selected_items"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/items_count"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/button_deselect_selected"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:background="@null"
        android:contentDescription="@string/select_all_items"
        android:src="@drawable/ic_select_all"
        app:layout_constraintEnd_toStartOf="@id/button_delete_selected"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_delete_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:background="@null"
        android:contentDescription="@string/delete_all_selected_items"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toStartOf="@id/button_menu_selected"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_menu_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="12dp"
        android:background="@null"
        android:contentDescription="@string/menu_for_selected_items"
        android:src="@drawable/ic_menu_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>