<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/image_editor_toolbar_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/image_editor_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cancel"
        android:padding="8dp"
        android:src="@drawable/ic_close"
        app:layout_constraintLeft_toLeftOf="@id/image_editor_toolbar_container"
        app:layout_constraintTop_toTopOf="@id/image_editor_toolbar_container" />

    <ImageButton
        android:id="@+id/image_editor_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/done"
        android:padding="8dp"
        android:src="@drawable/ic_check"
        app:layout_constraintRight_toRightOf="@id/image_editor_toolbar_container"
        app:layout_constraintTop_toTopOf="@id/image_editor_toolbar_container" />

    <TextView
        android:id="@+id/image_editor_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp"
        android:text="@string/save"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintRight_toRightOf="@id/image_editor_toolbar_container"
        app:layout_constraintTop_toTopOf="@id/image_editor_toolbar_container" />

</androidx.constraintlayout.widget.ConstraintLayout>